parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    BREAK
    COMILLA
    COMMENT_BLOQUE_DER
    COMMENT_BLOQUE_IZQ
    COMMENT_LINEA
    CONST
    CONTAINS
    CONTINUE
    DEFER
    DOBLE_COMILLA
    ELSE
    ESPACIADO
    FALLTHROUGH
    FALSE
    GO
    IGUAL
    IMPORT
    INTERFACE
    LEN
    PACKAGE
    PIPE
    RANGE
    SELECT
    SPLIT
    STRINGS
    STRUCT
    TRUE
    TYPE
    VACIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> expression
Rule 2     programa -> impresion
Rule 3     programa -> sentencia
Rule 4     programa -> asignacion
Rule 5     programa -> longvariable
Rule 6     programa -> boolcadena
Rule 7     programa -> companum
Rule 8     programa -> compaid
Rule 9     programa -> sentenciafor
Rule 10    programa -> arreglo
Rule 11    programa -> slice
Rule 12    programa -> capslice
Rule 13    programa -> switch
Rule 14    programa -> map
Rule 15    programa -> asignar_valor_map
Rule 16    programa -> eliminar_valor_map
Rule 17    programa -> obtener_valor_map
Rule 18    programa -> funcion
Rule 19    programa -> cadenabool
Rule 20    programa -> enterocadena
Rule 21    programa -> cadenaentero
Rule 22    programa -> flotantecadena
Rule 23    programa -> cadenaflotante
Rule 24    programa -> seman_operacion
Rule 25    impresion -> FMT PUNTO PRINTF PARENT_IZQ CADENA COMA NUMERO PARENT_DER
Rule 26    impresion -> FMT PUNTO PRINTF PARENT_IZQ empty PARENT_DER
Rule 27    impresion -> FMT PUNTO PRINTLN PARENT_IZQ CADENA COMA NUMERO PARENT_DER
Rule 28    impresion -> FMT PUNTO PRINTLN PARENT_IZQ empty PARENT_DER
Rule 29    longvariable -> ID PARENT_IZQ CADENA PARENT_DER
Rule 30    longvariable -> ID PARENT_IZQ ID PARENT_DER
Rule 31    companum -> NUMERO comparacion NUMERO
Rule 32    compaid -> ID comparacion ID
Rule 33    asignacion -> ID ASIGNACION factor
Rule 34    asignacion -> VAR ID tipo_dato ASIGNACION factor
Rule 35    asignacion -> VAR ID COMA ID tipo_dato ASIGNACION factor COMA factor
Rule 36    sentenciafor -> FOR ID ASIGNACION factor FIN_SENTENCIA ID comparacion factor FIN_SENTENCIA incremento LLAVE_IZQ programa LLAVE_DER
Rule 37    incremento -> ID INCREMENTO
Rule 38    incremento -> ID ASIGNACION ID
Rule 39    incremento -> ID DECREMENTO
Rule 40    arreglo -> ID ASIGNACION CORCHETE_IZQ cantidad CORCHETE_DER tipo_dato
Rule 41    arreglo -> ID ASIGNACION CORCHETE_IZQ cantidad CORCHETE_DER tipo_dato LLAVE_IZQ valores LLAVE_DER
Rule 42    cantidad -> NUMERO
Rule 43    cantidad -> ARRPUNTOS
Rule 44    valores -> factor
Rule 45    valores -> factor COMA valores
Rule 46    slice -> ID ASIGNACION MAKE PARENT_IZQ CORCHETE_IZQ CORCHETE_DER tipo_dato COMA NUMERO PARENT_DER
Rule 47    slice -> ID ASIGNACION MAKE PARENT_IZQ CORCHETE_IZQ CORCHETE_DER tipo_dato COMA NUMERO COMA NUMERO PARENT_DER
Rule 48    capslice -> ID PARENT_IZQ ID PARENT_DER
Rule 49    expression -> expression MAS term
Rule 50    expression -> expression MENOS term
Rule 51    expression -> term
Rule 52    term -> term MULTIPLICADOR factor
Rule 53    term -> term DIVISOR factor
Rule 54    term -> term MOD_DIVISION factor
Rule 55    term -> factor
Rule 56    sentencia -> IF factor comparacion factor LLAVE_IZQ programa LLAVE_DER
Rule 57    comparacion -> IGUALDAD
Rule 58    comparacion -> MAYOR
Rule 59    comparacion -> MENOR
Rule 60    comparacion -> MAYOR_IGU
Rule 61    comparacion -> MENOR_IGU
Rule 62    comparacion -> DESIGUALDAD
Rule 63    factor -> NUMERO
Rule 64    factor -> ID
Rule 65    factor -> CADENA
Rule 66    factor -> PARENT_IZQ expression PARENT_DER
Rule 67    switch -> SWITCH ID LLAVE_IZQ cases LLAVE_DER
Rule 68    cases -> case
Rule 69    cases -> case default
Rule 70    cases -> case cases
Rule 71    case -> CASE factor DOS_PUNTOS programa
Rule 72    default -> DEFAULT DOS_PUNTOS programa
Rule 73    map -> VAR ID MAP CORCHETE_IZQ tipo_dato CORCHETE_DER tipo_dato LLAVE_IZQ valores LLAVE_DER
Rule 74    map -> ID ASIGNACION MAKE PARENT_IZQ MAP CORCHETE_IZQ tipo_dato CORCHETE_DER tipo_dato PARENT_DER
Rule 75    map -> ID ASIGNACION MAP CORCHETE_IZQ tipo_dato CORCHETE_DER tipo_dato LLAVE_IZQ valores LLAVE_DER
Rule 76    tipo_dato -> INT
Rule 77    tipo_dato -> STRING
Rule 78    tipo_dato -> INT64
Rule 79    tipo_dato -> FLOAT32
Rule 80    tipo_dato -> FLOAT64
Rule 81    tipo_dato -> INT32
Rule 82    valores -> clave_valor
Rule 83    valores -> clave_valor COMA valores
Rule 84    clave_valor -> valor DOS_PUNTOS valor
Rule 85    valor -> CADENA
Rule 86    valor -> NUMERO
Rule 87    asignar_valor_map -> ID CORCHETE_IZQ valor CORCHETE_DER ASIGNACION valor
Rule 88    eliminar_valor_map -> DELETE PARENT_IZQ ID COMA valor PARENT_DER
Rule 89    obtener_valor_map -> ID CORCHETE_IZQ valor CORCHETE_DER
Rule 90    funcion -> FUNC ID PARENT_IZQ argumentos PARENT_DER tipo_dato LLAVE_IZQ programa LLAVE_DER
Rule 91    funcion -> FUNC ID PARENT_IZQ argumentos PARENT_DER tipo_dato LLAVE_IZQ programa RETURN ID LLAVE_DER
Rule 92    argumentos -> ID tipo_dato
Rule 93    argumentos -> ID tipo_dato COMA argumentos
Rule 94    empty -> <empty>
Rule 95    seman_operacion -> NUMERO MAS NUMERO
Rule 96    seman_operacion -> NUMERO MENOS NUMERO
Rule 97    seman_operacion -> NUMERO MULTIPLICADOR NUMERO
Rule 98    seman_operacion -> NUMERO DIVISOR NUMERO
Rule 99    seman_operacion -> NUMERO MOD_DIVISION NUMERO
Rule 100   seman_operacion -> FLOAT MAS NUMERO
Rule 101   seman_operacion -> FLOAT MENOS NUMERO
Rule 102   seman_operacion -> FLOAT MULTIPLICADOR NUMERO
Rule 103   seman_operacion -> FLOAT DIVISOR NUMERO
Rule 104   seman_operacion -> NUMERO MAS FLOAT
Rule 105   seman_operacion -> NUMERO MENOS FLOAT
Rule 106   seman_operacion -> NUMERO MULTIPLICADOR FLOAT
Rule 107   seman_operacion -> NUMERO DIVISOR FLOAT
Rule 108   seman_operacion -> FLOAT MAS FLOAT
Rule 109   seman_operacion -> FLOAT MENOS FLOAT
Rule 110   seman_operacion -> FLOAT MULTIPLICADOR FLOAT
Rule 111   seman_operacion -> FLOAT DIVISOR FLOAT
Rule 112   boolcadena -> STRCONV PUNTO FORMATBOOL PARENT_IZQ BOOLEAN PARENT_DER
Rule 113   cadenabool -> STRCONV PUNTO PARSEBOOL PARENT_IZQ CADENA PARENT_DER
Rule 114   flotantecadena -> STRCONV PUNTO FORMATFLOAT PARENT_IZQ FLOAT COMA CADENA COMA NUMERO PARENT_DER
Rule 115   cadenaflotante -> STRCONV PUNTO PARSEFLOAT PARENT_IZQ FLOAT COMA NUMERO PARENT_DER
Rule 116   enterocadena -> STRCONV PUNTO FORMATINT PARENT_IZQ CADENA COMA NUMERO PARENT_DER
Rule 117   cadenaentero -> STRCONV PUNTO PARSEINT PARENT_IZQ CADENA COMA NUMERO COMA NUMERO PARENT_DER

Terminals, with rules where they appear

AMPERSAND            : 
ARRPUNTOS            : 43
ASIGNACION           : 33 34 35 36 38 40 41 46 47 74 75 87
BOOLEAN              : 112
BREAK                : 
CADENA               : 25 27 29 65 85 113 114 116 117
CASE                 : 71
COMA                 : 25 27 35 35 45 46 47 47 83 88 93 114 114 115 116 117 117
COMILLA              : 
COMMENT_BLOQUE_DER   : 
COMMENT_BLOQUE_IZQ   : 
COMMENT_LINEA        : 
CONST                : 
CONTAINS             : 
CONTINUE             : 
CORCHETE_DER         : 40 41 46 47 73 74 75 87 89
CORCHETE_IZQ         : 40 41 46 47 73 74 75 87 89
DECREMENTO           : 39
DEFAULT              : 72
DEFER                : 
DELETE               : 88
DESIGUALDAD          : 62
DIVISOR              : 53 98 103 107 111
DOBLE_COMILLA        : 
DOS_PUNTOS           : 71 72 84
ELSE                 : 
ESPACIADO            : 
FALLTHROUGH          : 
FALSE                : 
FIN_SENTENCIA        : 36 36
FLOAT                : 100 101 102 103 104 105 106 107 108 108 109 109 110 110 111 111 114 115
FLOAT32              : 79
FLOAT64              : 80
FMT                  : 25 26 27 28
FOR                  : 36
FORMATBOOL           : 112
FORMATFLOAT          : 114
FORMATINT            : 116
FUNC                 : 90 91
GO                   : 
ID                   : 29 30 30 32 32 33 34 35 35 36 36 37 38 38 39 40 41 46 47 48 48 64 67 73 74 75 87 88 89 90 91 91 92 93
IF                   : 56
IGUAL                : 
IGUALDAD             : 57
IMPORT               : 
INCREMENTO           : 37
INT                  : 76
INT32                : 81
INT64                : 78
INTERFACE            : 
LEN                  : 
LLAVE_DER            : 36 41 56 67 73 75 90 91
LLAVE_IZQ            : 36 41 56 67 73 75 90 91
MAKE                 : 46 47 74
MAP                  : 73 74 75
MAS                  : 49 95 100 104 108
MAYOR                : 58
MAYOR_IGU            : 60
MENOR                : 59
MENOR_IGU            : 61
MENOS                : 50 96 101 105 109
MOD_DIVISION         : 54 99
MULTIPLICADOR        : 52 97 102 106 110
NUMERO               : 25 27 31 31 42 46 47 47 63 86 95 95 96 96 97 97 98 98 99 99 100 101 102 103 104 105 106 107 114 115 116 117 117
PACKAGE              : 
PARENT_DER           : 25 26 27 28 29 30 46 47 48 66 74 88 90 91 112 113 114 115 116 117
PARENT_IZQ           : 25 26 27 28 29 30 46 47 48 66 74 88 90 91 112 113 114 115 116 117
PARSEBOOL            : 113
PARSEFLOAT           : 115
PARSEINT             : 117
PIPE                 : 
PRINTF               : 25 26
PRINTLN              : 27 28
PUNTO                : 25 26 27 28 112 113 114 115 116 117
RANGE                : 
RETURN               : 91
SELECT               : 
SPLIT                : 
STRCONV              : 112 113 114 115 116 117
STRING               : 77
STRINGS              : 
STRUCT               : 
SWITCH               : 67
TRUE                 : 
TYPE                 : 
VACIO                : 
VAR                  : 34 35 73
error                : 

Nonterminals, with rules where they appear

argumentos           : 90 91 93
arreglo              : 10
asignacion           : 4
asignar_valor_map    : 15
boolcadena           : 6
cadenabool           : 19
cadenaentero         : 21
cadenaflotante       : 23
cantidad             : 40 41
capslice             : 12
case                 : 68 69 70
cases                : 67 70
clave_valor          : 82 83
compaid              : 8
companum             : 7
comparacion          : 31 32 36 56
default              : 69
eliminar_valor_map   : 16
empty                : 26 28
enterocadena         : 20
expression           : 1 49 50 66
factor               : 33 34 35 35 36 36 44 45 52 53 54 55 56 56 71
flotantecadena       : 22
funcion              : 18
impresion            : 2
incremento           : 36
longvariable         : 5
map                  : 14
obtener_valor_map    : 17
programa             : 36 56 71 72 90 91 0
seman_operacion      : 24
sentencia            : 3
sentenciafor         : 9
slice                : 11
switch               : 13
term                 : 49 50 51 52 53 54
tipo_dato            : 34 35 40 41 46 47 73 73 74 74 75 75 90 91 92 93
valor                : 84 84 87 87 88 89
valores              : 41 45 73 75 83

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . expression
    (2) programa -> . impresion
    (3) programa -> . sentencia
    (4) programa -> . asignacion
    (5) programa -> . longvariable
    (6) programa -> . boolcadena
    (7) programa -> . companum
    (8) programa -> . compaid
    (9) programa -> . sentenciafor
    (10) programa -> . arreglo
    (11) programa -> . slice
    (12) programa -> . capslice
    (13) programa -> . switch
    (14) programa -> . map
    (15) programa -> . asignar_valor_map
    (16) programa -> . eliminar_valor_map
    (17) programa -> . obtener_valor_map
    (18) programa -> . funcion
    (19) programa -> . cadenabool
    (20) programa -> . enterocadena
    (21) programa -> . cadenaentero
    (22) programa -> . flotantecadena
    (23) programa -> . cadenaflotante
    (24) programa -> . seman_operacion
    (49) expression -> . expression MAS term
    (50) expression -> . expression MENOS term
    (51) expression -> . term
    (25) impresion -> . FMT PUNTO PRINTF PARENT_IZQ CADENA COMA NUMERO PARENT_DER
    (26) impresion -> . FMT PUNTO PRINTF PARENT_IZQ empty PARENT_DER
    (27) impresion -> . FMT PUNTO PRINTLN PARENT_IZQ CADENA COMA NUMERO PARENT_DER
    (28) impresion -> . FMT PUNTO PRINTLN PARENT_IZQ empty PARENT_DER
    (56) sentencia -> . IF factor comparacion factor LLAVE_IZQ programa LLAVE_DER
    (33) asignacion -> . ID ASIGNACION factor
    (34) asignacion -> . VAR ID tipo_dato ASIGNACION factor
    (35) asignacion -> . VAR ID COMA ID tipo_dato ASIGNACION factor COMA factor
    (29) longvariable -> . ID PARENT_IZQ CADENA PARENT_DER
    (30) longvariable -> . ID PARENT_IZQ ID PARENT_DER
    (112) boolcadena -> . STRCONV PUNTO FORMATBOOL PARENT_IZQ BOOLEAN PARENT_DER
    (31) companum -> . NUMERO comparacion NUMERO
    (32) compaid -> . ID comparacion ID
    (36) sentenciafor -> . FOR ID ASIGNACION factor FIN_SENTENCIA ID comparacion factor FIN_SENTENCIA incremento LLAVE_IZQ programa LLAVE_DER
    (40) arreglo -> . ID ASIGNACION CORCHETE_IZQ cantidad CORCHETE_DER tipo_dato
    (41) arreglo -> . ID ASIGNACION CORCHETE_IZQ cantidad CORCHETE_DER tipo_dato LLAVE_IZQ valores LLAVE_DER
    (46) slice -> . ID ASIGNACION MAKE PARENT_IZQ CORCHETE_IZQ CORCHETE_DER tipo_dato COMA NUMERO PARENT_DER
    (47) slice -> . ID ASIGNACION MAKE PARENT_IZQ CORCHETE_IZQ CORCHETE_DER tipo_dato COMA NUMERO COMA NUMERO PARENT_DER
    (48) capslice -> . ID PARENT_IZQ ID PARENT_DER
    (67) switch -> . SWITCH ID LLAVE_IZQ cases LLAVE_DER
    (73) map -> . VAR ID MAP CORCHETE_IZQ tipo_dato CORCHETE_DER tipo_dato LLAVE_IZQ valores LLAVE_DER
    (74) map -> . ID ASIGNACION MAKE PARENT_IZQ MAP CORCHETE_IZQ tipo_dato CORCHETE_DER tipo_dato PARENT_DER
    (75) map -> . ID ASIGNACION MAP CORCHETE_IZQ tipo_dato CORCHETE_DER tipo_dato LLAVE_IZQ valores LLAVE_DER
    (87) asignar_valor_map -> . ID CORCHETE_IZQ valor CORCHETE_DER ASIGNACION valor
    (88) eliminar_valor_map -> . DELETE PARENT_IZQ ID COMA valor PARENT_DER
    (89) obtener_valor_map -> . ID CORCHETE_IZQ valor CORCHETE_DER
    (90) funcion -> . FUNC ID PARENT_IZQ argumentos PARENT_DER tipo_dato LLAVE_IZQ programa LLAVE_DER
    (91) funcion -> . FUNC ID PARENT_IZQ argumentos PARENT_DER tipo_dato LLAVE_IZQ programa RETURN ID LLAVE_DER
    (113) cadenabool -> . STRCONV PUNTO PARSEBOOL PARENT_IZQ CADENA PARENT_DER
    (116) enterocadena -> . STRCONV PUNTO FORMATINT PARENT_IZQ CADENA COMA NUMERO PARENT_DER
    (117) cadenaentero -> . STRCONV PUNTO PARSEINT PARENT_IZQ CADENA COMA NUMERO COMA NUMERO PARENT_DER
    (114) flotantecadena -> . STRCONV PUNTO FORMATFLOAT PARENT_IZQ FLOAT COMA CADENA COMA NUMERO PARENT_DER
    (115) cadenaflotante -> . STRCONV PUNTO PARSEFLOAT PARENT_IZQ FLOAT COMA NUMERO PARENT_DER
    (95) seman_operacion -> . NUMERO MAS NUMERO
    (96) seman_operacion -> . NUMERO MENOS NUMERO
    (97) seman_operacion -> . NUMERO MULTIPLICADOR NUMERO
    (98) seman_operacion -> . NUMERO DIVISOR NUMERO
    (99) seman_operacion -> . NUMERO MOD_DIVISION NUMERO
    (100) seman_operacion -> . FLOAT MAS NUMERO
    (101) seman_operacion -> . FLOAT MENOS NUMERO
    (102) seman_operacion -> . FLOAT MULTIPLICADOR NUMERO
    (103) seman_operacion -> . FLOAT DIVISOR NUMERO
    (104) seman_operacion -> . NUMERO MAS FLOAT
    (105) seman_operacion -> . NUMERO MENOS FLOAT
    (106) seman_operacion -> . NUMERO MULTIPLICADOR FLOAT
    (107) seman_operacion -> . NUMERO DIVISOR FLOAT
    (108) seman_operacion -> . FLOAT MAS FLOAT
    (109) seman_operacion -> . FLOAT MENOS FLOAT
    (110) seman_operacion -> . FLOAT MULTIPLICADOR FLOAT
    (111) seman_operacion -> . FLOAT DIVISOR FLOAT
    (52) term -> . term MULTIPLICADOR factor
    (53) term -> . term DIVISOR factor
    (54) term -> . term MOD_DIVISION factor
    (55) term -> . factor
    (63) factor -> . NUMERO
    (64) factor -> . ID
    (65) factor -> . CADENA
    (66) factor -> . PARENT_IZQ expression PARENT_DER

    FMT             shift and go to state 27
    IF              shift and go to state 31
    ID              shift and go to state 33
    VAR             shift and go to state 34
    STRCONV         shift and go to state 35
    NUMERO          shift and go to state 30
    FOR             shift and go to state 36
    SWITCH          shift and go to state 37
    DELETE          shift and go to state 38
    FUNC            shift and go to state 39
    FLOAT           shift and go to state 40
    CADENA          shift and go to state 29
    PARENT_IZQ      shift and go to state 28

    programa                       shift and go to state 1
    expression                     shift and go to state 2
    impresion                      shift and go to state 3
    sentencia                      shift and go to state 4
    asignacion                     shift and go to state 5
    longvariable                   shift and go to state 6
    boolcadena                     shift and go to state 7
    companum                       shift and go to state 8
    compaid                        shift and go to state 9
    sentenciafor                   shift and go to state 10
    arreglo                        shift and go to state 11
    slice                          shift and go to state 12
    capslice                       shift and go to state 13
    switch                         shift and go to state 14
    map                            shift and go to state 15
    asignar_valor_map              shift and go to state 16
    eliminar_valor_map             shift and go to state 17
    obtener_valor_map              shift and go to state 18
    funcion                        shift and go to state 19
    cadenabool                     shift and go to state 20
    enterocadena                   shift and go to state 21
    cadenaentero                   shift and go to state 22
    flotantecadena                 shift and go to state 23
    cadenaflotante                 shift and go to state 24
    seman_operacion                shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 32

state 1

    (0) S' -> programa .



state 2

    (1) programa -> expression .
    (49) expression -> expression . MAS term
    (50) expression -> expression . MENOS term

    $end            reduce using rule 1 (programa -> expression .)
    LLAVE_DER       reduce using rule 1 (programa -> expression .)
    DEFAULT         reduce using rule 1 (programa -> expression .)
    CASE            reduce using rule 1 (programa -> expression .)
    RETURN          reduce using rule 1 (programa -> expression .)
    MAS             shift and go to state 41
    MENOS           shift and go to state 42


state 3

    (2) programa -> impresion .

    $end            reduce using rule 2 (programa -> impresion .)
    LLAVE_DER       reduce using rule 2 (programa -> impresion .)
    DEFAULT         reduce using rule 2 (programa -> impresion .)
    CASE            reduce using rule 2 (programa -> impresion .)
    RETURN          reduce using rule 2 (programa -> impresion .)


state 4

    (3) programa -> sentencia .

    $end            reduce using rule 3 (programa -> sentencia .)
    LLAVE_DER       reduce using rule 3 (programa -> sentencia .)
    DEFAULT         reduce using rule 3 (programa -> sentencia .)
    CASE            reduce using rule 3 (programa -> sentencia .)
    RETURN          reduce using rule 3 (programa -> sentencia .)


state 5

    (4) programa -> asignacion .

    $end            reduce using rule 4 (programa -> asignacion .)
    LLAVE_DER       reduce using rule 4 (programa -> asignacion .)
    DEFAULT         reduce using rule 4 (programa -> asignacion .)
    CASE            reduce using rule 4 (programa -> asignacion .)
    RETURN          reduce using rule 4 (programa -> asignacion .)


state 6

    (5) programa -> longvariable .

    $end            reduce using rule 5 (programa -> longvariable .)
    LLAVE_DER       reduce using rule 5 (programa -> longvariable .)
    DEFAULT         reduce using rule 5 (programa -> longvariable .)
    CASE            reduce using rule 5 (programa -> longvariable .)
    RETURN          reduce using rule 5 (programa -> longvariable .)


state 7

    (6) programa -> boolcadena .

    $end            reduce using rule 6 (programa -> boolcadena .)
    LLAVE_DER       reduce using rule 6 (programa -> boolcadena .)
    DEFAULT         reduce using rule 6 (programa -> boolcadena .)
    CASE            reduce using rule 6 (programa -> boolcadena .)
    RETURN          reduce using rule 6 (programa -> boolcadena .)


state 8

    (7) programa -> companum .

    $end            reduce using rule 7 (programa -> companum .)
    LLAVE_DER       reduce using rule 7 (programa -> companum .)
    DEFAULT         reduce using rule 7 (programa -> companum .)
    CASE            reduce using rule 7 (programa -> companum .)
    RETURN          reduce using rule 7 (programa -> companum .)


state 9

    (8) programa -> compaid .

    $end            reduce using rule 8 (programa -> compaid .)
    LLAVE_DER       reduce using rule 8 (programa -> compaid .)
    DEFAULT         reduce using rule 8 (programa -> compaid .)
    CASE            reduce using rule 8 (programa -> compaid .)
    RETURN          reduce using rule 8 (programa -> compaid .)


state 10

    (9) programa -> sentenciafor .

    $end            reduce using rule 9 (programa -> sentenciafor .)
    LLAVE_DER       reduce using rule 9 (programa -> sentenciafor .)
    DEFAULT         reduce using rule 9 (programa -> sentenciafor .)
    CASE            reduce using rule 9 (programa -> sentenciafor .)
    RETURN          reduce using rule 9 (programa -> sentenciafor .)


state 11

    (10) programa -> arreglo .

    $end            reduce using rule 10 (programa -> arreglo .)
    LLAVE_DER       reduce using rule 10 (programa -> arreglo .)
    DEFAULT         reduce using rule 10 (programa -> arreglo .)
    CASE            reduce using rule 10 (programa -> arreglo .)
    RETURN          reduce using rule 10 (programa -> arreglo .)


state 12

    (11) programa -> slice .

    $end            reduce using rule 11 (programa -> slice .)
    LLAVE_DER       reduce using rule 11 (programa -> slice .)
    DEFAULT         reduce using rule 11 (programa -> slice .)
    CASE            reduce using rule 11 (programa -> slice .)
    RETURN          reduce using rule 11 (programa -> slice .)


state 13

    (12) programa -> capslice .

    $end            reduce using rule 12 (programa -> capslice .)
    LLAVE_DER       reduce using rule 12 (programa -> capslice .)
    DEFAULT         reduce using rule 12 (programa -> capslice .)
    CASE            reduce using rule 12 (programa -> capslice .)
    RETURN          reduce using rule 12 (programa -> capslice .)


state 14

    (13) programa -> switch .

    $end            reduce using rule 13 (programa -> switch .)
    LLAVE_DER       reduce using rule 13 (programa -> switch .)
    DEFAULT         reduce using rule 13 (programa -> switch .)
    CASE            reduce using rule 13 (programa -> switch .)
    RETURN          reduce using rule 13 (programa -> switch .)


state 15

    (14) programa -> map .

    $end            reduce using rule 14 (programa -> map .)
    LLAVE_DER       reduce using rule 14 (programa -> map .)
    DEFAULT         reduce using rule 14 (programa -> map .)
    CASE            reduce using rule 14 (programa -> map .)
    RETURN          reduce using rule 14 (programa -> map .)


state 16

    (15) programa -> asignar_valor_map .

    $end            reduce using rule 15 (programa -> asignar_valor_map .)
    LLAVE_DER       reduce using rule 15 (programa -> asignar_valor_map .)
    DEFAULT         reduce using rule 15 (programa -> asignar_valor_map .)
    CASE            reduce using rule 15 (programa -> asignar_valor_map .)
    RETURN          reduce using rule 15 (programa -> asignar_valor_map .)


state 17

    (16) programa -> eliminar_valor_map .

    $end            reduce using rule 16 (programa -> eliminar_valor_map .)
    LLAVE_DER       reduce using rule 16 (programa -> eliminar_valor_map .)
    DEFAULT         reduce using rule 16 (programa -> eliminar_valor_map .)
    CASE            reduce using rule 16 (programa -> eliminar_valor_map .)
    RETURN          reduce using rule 16 (programa -> eliminar_valor_map .)


state 18

    (17) programa -> obtener_valor_map .

    $end            reduce using rule 17 (programa -> obtener_valor_map .)
    LLAVE_DER       reduce using rule 17 (programa -> obtener_valor_map .)
    DEFAULT         reduce using rule 17 (programa -> obtener_valor_map .)
    CASE            reduce using rule 17 (programa -> obtener_valor_map .)
    RETURN          reduce using rule 17 (programa -> obtener_valor_map .)


state 19

    (18) programa -> funcion .

    $end            reduce using rule 18 (programa -> funcion .)
    LLAVE_DER       reduce using rule 18 (programa -> funcion .)
    DEFAULT         reduce using rule 18 (programa -> funcion .)
    CASE            reduce using rule 18 (programa -> funcion .)
    RETURN          reduce using rule 18 (programa -> funcion .)


state 20

    (19) programa -> cadenabool .

    $end            reduce using rule 19 (programa -> cadenabool .)
    LLAVE_DER       reduce using rule 19 (programa -> cadenabool .)
    DEFAULT         reduce using rule 19 (programa -> cadenabool .)
    CASE            reduce using rule 19 (programa -> cadenabool .)
    RETURN          reduce using rule 19 (programa -> cadenabool .)


state 21

    (20) programa -> enterocadena .

    $end            reduce using rule 20 (programa -> enterocadena .)
    LLAVE_DER       reduce using rule 20 (programa -> enterocadena .)
    DEFAULT         reduce using rule 20 (programa -> enterocadena .)
    CASE            reduce using rule 20 (programa -> enterocadena .)
    RETURN          reduce using rule 20 (programa -> enterocadena .)


state 22

    (21) programa -> cadenaentero .

    $end            reduce using rule 21 (programa -> cadenaentero .)
    LLAVE_DER       reduce using rule 21 (programa -> cadenaentero .)
    DEFAULT         reduce using rule 21 (programa -> cadenaentero .)
    CASE            reduce using rule 21 (programa -> cadenaentero .)
    RETURN          reduce using rule 21 (programa -> cadenaentero .)


state 23

    (22) programa -> flotantecadena .

    $end            reduce using rule 22 (programa -> flotantecadena .)
    LLAVE_DER       reduce using rule 22 (programa -> flotantecadena .)
    DEFAULT         reduce using rule 22 (programa -> flotantecadena .)
    CASE            reduce using rule 22 (programa -> flotantecadena .)
    RETURN          reduce using rule 22 (programa -> flotantecadena .)


state 24

    (23) programa -> cadenaflotante .

    $end            reduce using rule 23 (programa -> cadenaflotante .)
    LLAVE_DER       reduce using rule 23 (programa -> cadenaflotante .)
    DEFAULT         reduce using rule 23 (programa -> cadenaflotante .)
    CASE            reduce using rule 23 (programa -> cadenaflotante .)
    RETURN          reduce using rule 23 (programa -> cadenaflotante .)


state 25

    (24) programa -> seman_operacion .

    $end            reduce using rule 24 (programa -> seman_operacion .)
    LLAVE_DER       reduce using rule 24 (programa -> seman_operacion .)
    DEFAULT         reduce using rule 24 (programa -> seman_operacion .)
    CASE            reduce using rule 24 (programa -> seman_operacion .)
    RETURN          reduce using rule 24 (programa -> seman_operacion .)


state 26

    (51) expression -> term .
    (52) term -> term . MULTIPLICADOR factor
    (53) term -> term . DIVISOR factor
    (54) term -> term . MOD_DIVISION factor

    MAS             reduce using rule 51 (expression -> term .)
    MENOS           reduce using rule 51 (expression -> term .)
    $end            reduce using rule 51 (expression -> term .)
    PARENT_DER      reduce using rule 51 (expression -> term .)
    LLAVE_DER       reduce using rule 51 (expression -> term .)
    DEFAULT         reduce using rule 51 (expression -> term .)
    CASE            reduce using rule 51 (expression -> term .)
    RETURN          reduce using rule 51 (expression -> term .)
    MULTIPLICADOR   shift and go to state 43
    DIVISOR         shift and go to state 44
    MOD_DIVISION    shift and go to state 45


state 27

    (25) impresion -> FMT . PUNTO PRINTF PARENT_IZQ CADENA COMA NUMERO PARENT_DER
    (26) impresion -> FMT . PUNTO PRINTF PARENT_IZQ empty PARENT_DER
    (27) impresion -> FMT . PUNTO PRINTLN PARENT_IZQ CADENA COMA NUMERO PARENT_DER
    (28) impresion -> FMT . PUNTO PRINTLN PARENT_IZQ empty PARENT_DER

    PUNTO           shift and go to state 46


state 28

    (66) factor -> PARENT_IZQ . expression PARENT_DER
    (49) expression -> . expression MAS term
    (50) expression -> . expression MENOS term
    (51) expression -> . term
    (52) term -> . term MULTIPLICADOR factor
    (53) term -> . term DIVISOR factor
    (54) term -> . term MOD_DIVISION factor
    (55) term -> . factor
    (63) factor -> . NUMERO
    (64) factor -> . ID
    (65) factor -> . CADENA
    (66) factor -> . PARENT_IZQ expression PARENT_DER

    NUMERO          shift and go to state 48
    ID              shift and go to state 49
    CADENA          shift and go to state 29
    PARENT_IZQ      shift and go to state 28

    expression                     shift and go to state 47
    term                           shift and go to state 26
    factor                         shift and go to state 32

state 29

    (65) factor -> CADENA .

    MULTIPLICADOR   reduce using rule 65 (factor -> CADENA .)
    DIVISOR         reduce using rule 65 (factor -> CADENA .)
    MOD_DIVISION    reduce using rule 65 (factor -> CADENA .)
    MAS             reduce using rule 65 (factor -> CADENA .)
    MENOS           reduce using rule 65 (factor -> CADENA .)
    $end            reduce using rule 65 (factor -> CADENA .)
    PARENT_DER      reduce using rule 65 (factor -> CADENA .)
    IGUALDAD        reduce using rule 65 (factor -> CADENA .)
    MAYOR           reduce using rule 65 (factor -> CADENA .)
    MENOR           reduce using rule 65 (factor -> CADENA .)
    MAYOR_IGU       reduce using rule 65 (factor -> CADENA .)
    MENOR_IGU       reduce using rule 65 (factor -> CADENA .)
    DESIGUALDAD     reduce using rule 65 (factor -> CADENA .)
    LLAVE_DER       reduce using rule 65 (factor -> CADENA .)
    DEFAULT         reduce using rule 65 (factor -> CADENA .)
    CASE            reduce using rule 65 (factor -> CADENA .)
    RETURN          reduce using rule 65 (factor -> CADENA .)
    LLAVE_IZQ       reduce using rule 65 (factor -> CADENA .)
    FIN_SENTENCIA   reduce using rule 65 (factor -> CADENA .)
    DOS_PUNTOS      reduce using rule 65 (factor -> CADENA .)
    COMA            reduce using rule 65 (factor -> CADENA .)


state 30
